# text-sentiment-lstm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  sample_test.csv  sample_train.csv
docs/: usage.md
examples/: classify_reviews.py  sample_reviews.txt
models/: sentlstm_rt.pt
notebooks/: demo.ipynb
results/: metrics.json
scripts/: benchmark.py  download_data.py  train_sample.py
src/sentlstm/: __init__.py  calibration.py  data.py  embeddings.py  models.py  predict.py  tokenizer.py  train.py
tests/: test_sentlstm.py
